2008-02-28  Johannes Schmid <jhs@gnome.org>

	* plugins/document-manager/anjuta-docman.c:
	(anjuta_docman_page_destroy):
	Do not unref widget because the GtkNotebook will unref them
	
	* plugins/file-manager/file-view.c: (file_view_refresh):
	* plugins/search/search_preferences.c: (search_preferences_init):
	Fixed a memory leaks
	
	* plugins/sourceview/sourceview.c: (sourceview_add_monitor),
	(ieditor_get_offset), (ieditor_iface_init),
	(idocument_get_filename), (ilanguage_get_supported_languages),
	(autodetect_language):
	
	Fixed memory leaks and implemented ianjuta_editor_get_offset() which
	was missing.

2008-02-28  Johannes Schmid <jhs@gnome.org>

	* plugins/sourceview/anjuta-view.c: (anjuta_view_key_press_event):
	Hide tooltip when Up, Down, Page_Up or Page_Down is pressed

2008-02-27  Naba Kumar  <naba@gnome.org>

	* plugins/document-manager/plugin.c: (on_docman_auto_save): Reverted
	string break. That was a mistake doing at this point.

=== anjuta 2.3.5 ===

2008-02-26  Naba Kumar  <naba@gnome.org>

	* plugins/document-manager/plugin.c: (on_docman_auto_save): Fixed a
	crash when there is a modified new file open, a non-modified exiting
	file open and autosave happen. Simplified error checking logic and
	avoided memory corruption. Fixes bug #Bug 518716.

2008-02-25  Naba Kumar  <naba@gnome.org>

	* NEWS: Updated for release 2.3.5
	* configure.in: Bumped version to 2.3.5

	* plugins/build-basic-autotools/build-basic-autotools.c:
	(on_editor_changed): Avoid accessing text which is greater than
	valid range.

	* plugins/editor/text_editor_cbs.[c,h]: Removed dead code.

2008-02-25  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/debug-manager/breakpoints.c:
	Fix #518329: Crash when adding breakpoint and other similar bugs

2008-02-25  Johannes Schmid <jhs@gnome.org>

	* tagmanager/entry.c: (updateSortedFlag), (isCtagsLine),
	(copyBytes), (copyFile), (openTagFile), (makeTagEntry):
	Never call error() which calls exit()